--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -19,7 +19,13 @@
             <Setter Property="Background" Value="GhostWhite"/>
             <Setter Property="FontWeight" Value="Normal"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
+            <Setter Property="Margin" Value="1,0,0,0"/>
+            <!--<DataGrid.Resources>
+                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
+            </DataGrid.Resources>-->
+            
             <Style.Triggers>
+                
                 <Trigger Property="AlternationIndex" Value="1">
                     <Setter Property="Background" Value="#FFE6E6E6"/>
                 </Trigger>
@@ -29,12 +35,13 @@
                 <Trigger Property="IsSelected" Value="True">
                     <Setter Property="Background" Value="#F9F99F" />
                 </Trigger>
-                <Trigger Property="Validation.HasError" Value="True" >
-                    <!--<Setter Property="Effect">
+                
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="Effect">
                         <Setter.Value>
                             <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
                         </Setter.Value>
-                    </Setter>-->
+                    </Setter>
                     <Setter Property="BorderThickness" Value="2" />
                     <Setter Property="BorderBrush" Value="#FFA9D1F4" />
                     <Setter Property="Foreground" Value="Blue" />
@@ -48,11 +55,13 @@
             <Setter Property="Background" Value="#FFA9D1F4"/>
             <Setter Property="FontWeight" Value="Medium"/>
             <Setter Property="ContextMenu" Value="{x:Null}"/>
-            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="#FFE6E6E6" />
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Padding" Value="5,0,0,0"/>
+            <Setter Property="Margin" Value="0,1,0,1"/>
+            
         </Style>
 
 
@@ -63,7 +72,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridCell}">
                         <Grid Background="{TemplateBinding Background}">
-                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0" />
+                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
