--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="IngresoPedidos.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
         xmlns:helpers="clr-namespace:IngresoPedidos.Helpers"
+        xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
         mc:Ignorable="d"
-        Title="EXO: Ingreso de Pedidos" Height="640" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="EXO: Ingreso de Pedidos" Height="768" Width="1920" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.Resources>
         <viewModels:MainViewModel x:Key="ViewModel" />
     </Window.Resources>
@@ -20,6 +20,10 @@
         <!---->
         <Border BorderBrush="#FFA9D1F4" BorderThickness="3" HorizontalAlignment="Left" Margin="10,43,0,10" Width="258" Background="#FFF0F0F0"/>
 
+
+        <Border BorderBrush="#FFABADB3" BorderThickness="1" HorizontalAlignment="Left" Margin="14,389,0,0" Width="250" Background="#FFF0F0F0" Height="250" VerticalAlignment="Top">
+            <Image Margin="0"/>
+        </Border>
 
 
         <!---->
@@ -53,7 +57,7 @@
                 <DataGridTextColumn Header="ARTICULO" Binding="{Binding Articulo}"/>
                 <DataGridTextColumn Header="CANTIDAD" Binding="{Binding CantidadEquipos}"/>
                 <DataGridTextColumn Header="INGRESO A SISTEMA" Binding="{Binding FechaIngreso}" MinWidth="196"/>
-                <DataGridTextColumn Header="ESTADO" Binding="{Binding EstadoPedido}"/>
+                <DataGridTextColumn Header="ESTADO" Binding="{Binding EstadoPedido}" MaxWidth="96"/>
                 <DataGridTextColumn Header="FECHA ESTADO" Binding="{Binding FechaEstado}" MinWidth="196"/>
                 <DataGridTemplateColumn Header="SUCESOR" MaxWidth="110">
                     <DataGridTemplateColumn.CellTemplate>
@@ -77,9 +81,9 @@
         </DataGrid>
 
         <!---->
-        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="14,336,0,0" Width="250" Height="25" VerticalAlignment="Top" TabIndex="11" FontFamily="Consolas"/>
+        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="14,336,0,0" Width="250" Height="25" VerticalAlignment="Top" TabIndex="11" FontFamily="Consolas" Click="Button_Click"/>
         <Button Content="NUEVO" Command="{Binding CancelBusyIndicatorCommand}" HorizontalAlignment="Left" Margin="14,362,0,0" Width="250" Height="25" VerticalAlignment="Top" TabIndex="11" FontFamily="Consolas"/>
-        <Menu Height="30" VerticalAlignment="Top" Margin="10,10,10,0" BorderThickness="2" BorderBrush="#FFA9D1F4">
+        <Menu Height="30" VerticalAlignment="Top" Margin="10,10,236,0" BorderThickness="2" BorderBrush="#FFA9D1F4">
             <Menu.ItemsPanel>
                 <ItemsPanelTemplate>
                     <DockPanel HorizontalAlignment="Stretch" Background="#FFF0F0F0"/>
@@ -88,9 +92,10 @@
             <MenuItem Header="Pedido" FontFamily="Consolas" >
                 <MenuItem Header="Buscar" />
                 <MenuItem Header="Ver Movimientos" />
+                <MenuItem Header="Actualizar Imagen" />
                 <MenuItem Header="Generar Recibo" />
             </MenuItem>
-            <MenuItem Header="Lista" FontFamily="Consolas" >
+            <!--<MenuItem Header="Lista" FontFamily="Consolas" >
                 <MenuItem Header="Todos" IsCheckable="True" helpers:MenuItemExtensions.GroupName="grupoEstados" Click="MenuItemClicked" />
                 <MenuItem Header="Despachado" IsCheckable="True" helpers:MenuItemExtensions.GroupName="grupoEstados" Click="MenuItemClicked" />
                 <MenuItem Header="Cancelado" IsCheckable="True" helpers:MenuItemExtensions.GroupName="grupoEstados" Click="MenuItemClicked"  />
@@ -103,7 +108,7 @@
                 <MenuItem Header="Reprocesado" IsCheckable="True" helpers:MenuItemExtensions.GroupName="grupoEstados" Click="MenuItemClicked"  />
                 <Separator/>
                 <MenuItem Header="Actualizar" />
-            </MenuItem>
+            </MenuItem>-->
             <MenuItem Header="Display" FontFamily="Consolas">
                 <MenuItem Header="Activar" IsCheckable="True" />
                 <Separator/>
@@ -130,6 +135,35 @@
             <CheckBox x:Name="CheckBoxComment" Checked="CheckBoxComment_Checked"  Content="Comentario" Margin="0" TabIndex="9" FontFamily="Consolas" Padding="3,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" BorderBrush="#FFACACAC"/>
         </Border>
         <TextBox x:Name="TextBoxComment" HorizontalAlignment="Left" BorderBrush="#FFABADB3" IsEnabled="{Binding ElementName=CheckBoxComment, Path=IsChecked}" BorderThickness="1" Height="77" Margin="14,258,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" MaxLength="120" MaxLines="2" TabIndex="10" FontFamily="Consolas" Padding="3,0,0,0"/>
+        <ComboBox Margin="0,10,10,0" FontFamily="Consolas" FontWeight="Medium" FontSize="12" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="96" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <ComboBoxItem>1</ComboBoxItem>
+            <ComboBoxItem>2</ComboBoxItem>
+            <ComboBoxItem>3</ComboBoxItem>
+            <ComboBoxItem>4</ComboBoxItem>
+            <ComboBoxItem>5</ComboBoxItem>
+            <ComboBoxItem>6</ComboBoxItem>
+            <ComboBoxItem>7</ComboBoxItem>
+            <ComboBoxItem>8</ComboBoxItem>
+            <ComboBoxItem>9</ComboBoxItem>
+            <ComboBoxItem>10</ComboBoxItem>
+            <ComboBoxItem>11</ComboBoxItem>
+            <ComboBoxItem>12</ComboBoxItem>
+            <ComboBoxItem>13</ComboBoxItem>
+            <ComboBoxItem>14</ComboBoxItem>
+            <ComboBoxItem>15</ComboBoxItem>
+            </ComboBox>
+                <ComboBox Margin="0,10,107,0" FontFamily="Consolas" FontWeight="Medium" FontSize="12" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="128" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            <ComboBoxItem>TODOS</ComboBoxItem>
+            <ComboBoxItem>DESPACHADOS</ComboBoxItem>
+            <ComboBoxItem>INGRESADOS</ComboBoxItem>
+            <ComboBoxItem>CANCELADOS</ComboBoxItem>
+            <ComboBoxItem>PRODUCCION</ComboBoxItem>
+            <ComboBoxItem>PAUSADOS</ComboBoxItem>
+            <ComboBoxItem>INCOMPLETO</ComboBoxItem>
+            <ComboBoxItem>COMPLETO</ComboBoxItem>
+            <ComboBoxItem>AUTORIZADO</ComboBoxItem>
+            <ComboBoxItem>REPROCESADO</ComboBoxItem>
+            </ComboBox>
 
 
     </Grid>
